--- a/Vinicius.VirtualStore.Web/Views/Produto/Index.cshtml
+++ b/Vinicius.VirtualStore.Web/Views/Produto/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Vinicius.VirtualStore.Domain.Entities.Produtos>
+﻿@model IEnumerable<Vinicius.VirtualStore.Domain.Entities.Products>
 
 @{
     ViewBag.Title = "Index";
