--- a/Vinicius.VirtualStore.Web/Views/Shared/_DetailsProducts.cshtml
+++ b/Vinicius.VirtualStore.Web/Views/Shared/_DetailsProducts.cshtml
@@ -1,6 +1,8 @@
 ﻿@model Vinicius.VirtualStore.Domain.Entities.Products
 <div class="well">
-    <h3><strong>@Model.Name</strong> </h3>
+
+    <h3><strong>@Model.Name</strong>
+    </h3>
     <h3><span class="pull-right label label-primary ">@Model.Price.ToString("c")</span></h3>
     <h3><span class="lead">@Model.ProductDescription</span></h3>
 </div>
