--- a/Vinicius.VirtualStore.Web/Views/Shared/_DetailsProducts.cshtml
+++ b/Vinicius.VirtualStore.Web/Views/Shared/_DetailsProducts.cshtml
@@ -4,5 +4,14 @@
     <h3><strong>@Model.Name</strong>
     </h3>
     <h3><span class="pull-right label label-primary ">@Model.Price.ToString("c")</span></h3>
+    @using (Html.BeginForm("Add", "Cart"))
+    {
+        <div class="pull-right">
+            @Html.HiddenFor(p => p.ProductId)
+            @Html.Hidden("returnUrl", Request.Url.PathAndQuery)
+            <input type="submit" class="btn btn-success" value="Comprar"/>
+        </div>
+    }
+
     <h3><span class="lead">@Model.ProductDescription</span></h3>
 </div>
