--- a/Vinicius.VirtualStore.Web/Views/Shared/_Layout.cshtml
+++ b/Vinicius.VirtualStore.Web/Views/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Viniciu's Virtual Store</title>
 
+
     <link href="~/Content/bootstrap.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/bootstrap-theme.css" rel="stylesheet" type="text/css" />
 
@@ -15,6 +16,7 @@
 <body>
     <div class="navbar navbar-inverse" role="navigation">
         <a class="navbar-brand" href="#">Viniciu's Virtual Store </a>
+        @Html.Action("Resume", "Cart")
     </div>
     <div class="row panel">
         <div id="categorias" class="col-xs-3">
