--- a/Vinicius.VirtualStore.Web/Views/Shared/_DetailsProducts.cshtml
+++ b/Vinicius.VirtualStore.Web/Views/Shared/_DetailsProducts.cshtml
@@ -9,7 +9,7 @@
         <div class="pull-right">
             @Html.HiddenFor(p => p.ProductId)
             @Html.Hidden("returnUrl", Request.Url.PathAndQuery)
-            <input type="submit" class="btn btn-success" value="Comprar"/>
+            <input type="submit" class="btn btn-success" value="Buy"/>
         </div>
     }
 
