--- a/Vinicius.VirtualStore.Web/Views/Cart/Resume.cshtml
+++ b/Vinicius.VirtualStore.Web/Views/Cart/Resume.cshtml
@@ -5,5 +5,5 @@
 </div>
 <div class="navbar-text navbar-right">
     <b>Your Cart</b>
-    @Model.CartItems.Sum(c => c.Quantity) Item(s), @Model.TotalValue().ToString("C") &nbsp;
+    @Model.CartItems.Sum(c => c.Quantity) Item(s), @Model.TotalValue().ToString("C") &nbsp;&nbsp;
 </div>
