--- a/Vinicius.VirtualStore.Web/Views/Cart/CloseOrder.cshtml
+++ b/Vinicius.VirtualStore.Web/Views/Cart/CloseOrder.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Vinicius.VirtualStore.Domain.Entities.Order
 
 @{
-    ViewBag.Title = "Vinicius's Close Order";
+    ViewBag.Title = "Close Order";
 }
 
 
@@ -18,27 +18,18 @@
     </div>
 
     <h3>Information for delivery</h3>
+    foreach (var properties in ViewData.ModelMetadata.Properties)
+    {
+        if (properties.PropertyName != "GiftWrap" && properties.PropertyName != "ClientName")
+        {
+            <div class="form-group">
+                <label>@(properties.DisplayName ?? properties.PropertyName) </label>
+                @Html.TextBox(properties.PropertyName, null, new { @class = "form-control" })
+            </div>
+        }
+
+    }
     <div class="form-group">
-        <label>Zip Code:</label>
-        @Html.TextBoxFor(o => o.Cep, new {@class = "form-control"})
-        <br/>
-        <label>Address:</label>
-        @Html.TextBoxFor(o => o.Address, new {@class = "form-control"})
-        <br/>
-        <label>Complement:</label>
-        @Html.TextBoxFor(o => o.Complement, new {@class = "form-control"})
-        <br/>
-        <label>City:</label>
-        @Html.TextBoxFor(o => o.City, new {@class = "form-control"})
-        <br/>
-        <label>Neighborhood:</label>
-        @Html.TextBoxFor(o => o.Neighborhood, new {@class = "form-control"})
-        <br/>
-        <label>State</label>
-        @Html.TextBoxFor(o => o.State, new {@class = "form-control"})
-        <br/>
-        <label>E-mail:</label>
-        @Html.TextBoxFor(o => o.Email, new {@class = "form-control"})
         <h3>Options</h3>
         <div class="checkbox">
             <label>
@@ -47,5 +38,7 @@
             </label>
         </div>
     </div>
+    <hr/>
+
     <input class="btn btn-primary" type="submit" value="Close Order"/>
 }
